fix(web-component): workspace toolbar covers scrollbar

--- a/Frontend/src/app/pages/workspace-page/workspace-page.component.scss
+++ b/Frontend/src/app/pages/workspace-page/workspace-page.component.scss
@@ -1,16 +1,51 @@
 @import '../../core-ui-module/styles/variables';
 
 .frame {
-    /*position:relative;
-  display:table;
-  z-index:95;
-  */
-    width: 100%;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.topbarFrame {
+    position: sticky;
+    top: var(--mainnavHeight);
+    z-index: 60;
+    > div {
+        width: 100%;
+        height: $workspaceBreadcrumbsHeight;
+        background-color: #fff;
+        @include materialShadow();
+        display: flex;
+        > es-breadcrumbs {
+            padding-left: 30px;
+            flex-grow: 1;
+            height: 100%;
+        }
+        > es-actionbar {
+            position: absolute;
+            right: 0;
+            height: 100%;
+            padding: 0 10px;
+            display: flex;
+            align-items: center;
+            z-index: 62;
+            background: linear-gradient(
+                to right,
+                rgba(255, 255, 255, 0.001) 0,
+                #fff 10px,
+                #fff 100%
+            ); /* safari fix */
+        }
+    }
+    ::ng-deep {
+        .breadcrumb {
+            div {
+                word-break: break-all;
+            }
+        }
+    }
 }
 
 .workspace-container {
-    // Prevent other elements from pushing the toolbar (position: fixed) further below the main nav.
     display: flex;
 }
 
@@ -107,9 +142,7 @@ es-user-quota {
     position: relative;
     display: block;
     left: 300px;
-    top: $secondaryBarHeight;
     width: calc(100% - 300px);
-    height: calc(100% - (var(--mainnavHeight) + #{$secondaryBarHeight}));
     transition: all $transitionNormal;
 }
 
@@ -128,46 +161,7 @@ es-user-quota {
 .viewType div {
     /* border-left:1px solid #ccc; */
 }
-.topbarFrame {
-    position: fixed;
-    left: 0;
-    width: 100%;
-    z-index: 60;
-    > div {
-        width: 100%;
-        height: $workspaceBreadcrumbsHeight;
-        background-color: #fff;
-        @include materialShadow();
-        display: flex;
-        > es-breadcrumbs {
-            padding-left: 30px;
-            flex-grow: 1;
-            height: 100%;
-        }
-        > es-actionbar {
-            position: absolute;
-            right: 0;
-            height: 100%;
-            padding: 0 10px;
-            display: flex;
-            align-items: center;
-            z-index: 62;
-            background: linear-gradient(
-                to right,
-                rgba(255, 255, 255, 0.001) 0,
-                #fff 10px,
-                #fff 100%
-            ); /* safari fix */
-        }
-    }
-}
-:host ::ng-deep {
-    .topbarFrame .breadcrumb {
-        div {
-            word-break: break-all;
-        }
-    }
-}
+
 .tree {
     @include materialShadow();
 }
